--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,17 +22,18 @@
 
     <RelativeLayout
         android:id="@+id/category_type"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_centerInParent="true"
         android:background="@drawable/circle_bg_gray"
-        android:clickable="true">
+        android:visibility="invisible">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:padding="@dimen/activity_margin_5"
-            android:src="@drawable/profile_img" />
+            android:src="@drawable/profile_img"
+            />
     </RelativeLayout>
 </RelativeLayout>
