--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -21,56 +21,55 @@
             android:focusableInTouchMode="true"
             android:orientation="vertical">
 
-            <FrameLayout
-                android:id="@+id/frame_detail_image"
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.v7.widget.CardView
+                <android.support.design.widget.CollapsingToolbarLayout
+                    android:id="@+id/collapsing_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/activity_margin_5"
-                    android:background="@color/white"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:foreground="?attr/selectableItemBackground"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="5dp"
-                    app:cardPreventCornerOverlap="false"
-                    app:cardUseCompatPadding="true">
+                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
 
-                    <FrameLayout
+                    <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/activity_margin_5"
+                        android:background="@color/white"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        app:cardCornerRadius="5dp"
+                        app:cardElevation="5dp"
+                        app:cardPreventCornerOverlap="false"
+                        app:cardUseCompatPadding="true"
+                        app:layout_collapseMode="parallax">
 
-                        <ImageView
-                            android:id="@+id/post_detail_img"
+                        <FrameLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:contentDescription="@string/app_name"
-                            android:minHeight="300dp"
-                            android:scaleType="centerCrop"
-                            android:transitionName="@string/transition_image"
-                            tools:targetApi="lollipop" />
+                            android:layout_height="wrap_content">
 
-                        <ProgressBar
-                            android:id="@+id/progress_bar"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center" />
+                            <ImageView
+                                android:id="@+id/post_detail_img"
+                                android:layout_width="match_parent"
+                                android:layout_height="300dp"
+                                android:contentDescription="@string/app_name"
+                                android:minHeight="250dp"
+                                android:maxHeight="300dp"
+                                android:scaleType="centerCrop"
+                                android:transitionName="@string/transition_image"
+                                tools:targetApi="lollipop" />
 
-                        <ImageView
-                            android:id="@+id/btn_download"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="end|bottom"
-                            android:layout_margin="@dimen/margin_12"
-                            android:contentDescription="@string/app_name"
-                            android:src="@drawable/ic_cloud_download"
-                            android:tint="@color/colorPrimary" />
-                    </FrameLayout>
-                </android.support.v7.widget.CardView>
-            </FrameLayout>
+                            <ProgressBar
+                                android:id="@+id/progress_bar"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center" />
+                        </FrameLayout>
+                    </android.support.v7.widget.CardView>
+                </android.support.design.widget.CollapsingToolbarLayout>
+            </android.support.design.widget.AppBarLayout>
 
 
             <LinearLayout
@@ -107,8 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/margin_4">
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -189,25 +187,22 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/activity_margin_5"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:paddingLeft="@dimen/activity_margin_10"
-                android:paddingRight="@dimen/activity_margin_10">
+                android:paddingLeft="@dimen/margin_8"
+                android:paddingRight="@dimen/margin_8">
 
                 <TextView
                     android:id="@+id/tags"
                     style="@style/txtview_small_widget"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_margin_3" />
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/description"
                     style="@style/txtview_small_widget"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_margin_3" />
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/readmore"
@@ -215,19 +210,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/activity_margin_3"
                     android:clickable="true"
                     android:focusable="true"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     android:gravity="center"
-                    android:padding="@dimen/activity_margin_5"
+                    android:padding="@dimen/margin_4"
                     android:text="@string/show_more"
                     android:textColor="@color/color_icon" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:layout_marginTop="@dimen/activity_margin_10"
+                    android:layout_marginTop="@dimen/margin_8"
                     android:background="@color/dark_gray" />
 
                 <TextView
@@ -249,4 +243,16 @@
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_16"
+        android:src="@drawable/ic_cloud_download"
+        app:backgroundTint="@color/colorPrimary"
+        app:elevation="@dimen/activity_margin_5"
+        app:layout_anchor="@id/post_detail_img"
+        app:layout_anchorGravity="end|right|bottom"
+        app:tint="@color/white"
+        tools:ignore="UnusedAttribute" />
 </android.support.design.widget.CoordinatorLayout>
