--- a/app/src/main/res/layout/view_downloaded.xml
+++ b/app/src/main/res/layout/view_downloaded.xml
@@ -14,7 +14,7 @@
     <ImageView
         android:id="@+id/img_download"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/liked_pic_size"
+        android:layout_height="@dimen/default_pic_size"
         android:transitionName="@string/transition_image"
         android:scaleType="centerCrop"/>
 </android.support.v7.widget.CardView>
