--- a/app/src/main/res/layout/activity_musicplayer.xml
+++ b/app/src/main/res/layout/activity_musicplayer.xml
@@ -16,7 +16,7 @@
             <FrameLayout
                 android:id="@+id/musicplayer_contaner"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
+                android:layout_height="match_parent"/>
 
             <FrameLayout
                 android:id="@+id/player_bottomsheet"
