--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="nav_drawer_width">260dp</dimen>
 
     <dimen name="activity_margin_16">16dp</dimen>
+    <dimen name="margin_32">32dp</dimen>
     <dimen name="margin_16">16dp</dimen>
     <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_8">8dp</dimen>
