--- a/app/src/main/res/layout/view_comment_media.xml
+++ b/app/src/main/res/layout/view_comment_media.xml
@@ -6,6 +6,7 @@
         android:id="@+id/parent_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/transparent"
         android:layout_marginEnd="@dimen/margin_32"
         android:layout_marginRight="@dimen/margin_32"
         android:layout_marginTop="@dimen/margin_4">
