--- a/app/src/main/res/layout/view_list.xml
+++ b/app/src/main/res/layout/view_list.xml
@@ -24,7 +24,7 @@
                 android:transitionName="@string/transition_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/app_name"
+                android:contentDescription="@string/timeline_post"
                 android:minHeight="200dp"
                 android:scaleType="centerCrop"
                 tools:ignore="UnusedAttribute" />
