--- a/app/src/main/res/layout/fragment_profile_pic.xml
+++ b/app/src/main/res/layout/fragment_profile_pic.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.design.widget.CoordinatorLayout
@@ -26,7 +27,8 @@
                 android:layout_centerVertical="true"
                 android:scaleType="matrix"
                 android:src="@drawable/def_profile_img"
-                android:transitionName="profile_pic" />
+                android:transitionName="profile_pic"
+                tools:targetApi="lollipop" />
 
             <ProgressBar
                 android:id="@+id/progress_bar"
