--- a/app/src/main/res/layout/view_list.xml
+++ b/app/src/main/res/layout/view_list.xml
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/timeline_post"
                 android:minHeight="200dp"
+                android:src="@drawable/ic_default_image"
                 android:scaleType="centerCrop"
                 tools:ignore="UnusedAttribute" />
         </RelativeLayout>
