--- a/app/src/main/res/layout/view_comment.xml
+++ b/app/src/main/res/layout/view_comment.xml
@@ -6,6 +6,8 @@
         android:id="@+id/parent_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_8"
+        android:layout_marginStart="@dimen/margin_8"
         android:layout_marginEnd="@dimen/margin_32"
         android:layout_marginRight="@dimen/margin_32"
         android:layout_marginTop="@dimen/margin_4">
